Fix layout issues mobile and tablet devices up to iPad Pro size

--- a/_scss/2-global-components/_apply.scss
+++ b/_scss/2-global-components/_apply.scss
@@ -7,6 +7,18 @@
   width: 70%;
 }
 
+@media screen and (min-width: 768px) {
+  .apply-pos {
+    width: 60%;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .apply-pos {
+    width: 40%;
+  }
+}
+
 .no-scroll {
   overflow-y: hidden;
 }
