--- a/_scss/2-global-components/_bottom-cards.scss
+++ b/_scss/2-global-components/_bottom-cards.scss
@@ -23,7 +23,21 @@
   border-color: white;
 }
 
+@media screen and (min-width: 768px) {
+  .engagement-card {
+    width: 40%;
+    margin-left: 30%;
+    margin-right: 30%;
+  }
+}
+
 .card-btn {
   margin-bottom: 20px;
   margin-top: 20px;
+}
+
+@media screen and (min-width: 480px) {
+  .img-marg {
+    margin-bottom: 40px;
+  }
 }
