--- a/_scss/2-global-components/_more.scss
+++ b/_scss/2-global-components/_more.scss
@@ -5,3 +5,15 @@
   margin-bottom: -40px;
   width: 80%;
 }
+
+@media screen and (min-width: 768px) {
+  .more-pos {
+    width: 60%;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .more-pos {
+    width: 40%;
+  }
+}
