--- a/_scss/2-global-components/_questions.scss
+++ b/_scss/2-global-components/_questions.scss
@@ -5,10 +5,22 @@
   width: 30%;
 }
 
+@media screen and (min-width: 768px) {
+  .phone {
+    width: 20%;
+  }
+}
+
 .questions-pos {
   margin-bottom: -40px;
   margin-top: -40px;
-  width: 80%;
+  width: 60%;
+}
+
+@media screen and (min-width: 1024px) {
+  .questions-pos {
+    width: 40%;
+  }
 }
 
 .contact-intro {
