--- a/_scss/3-default-components/_index-banners.scss
+++ b/_scss/3-default-components/_index-banners.scss
@@ -42,6 +42,22 @@
   }
 }
 
+@media screen and (min-width: 768px) and (max-width: 1024px) {
+  .top-banner {
+    background-image: url(/img/top-banner-tablet.png);
+    background-size: contain;
+    height: 360px;
+  }
+}
+
+@media screen and (min-width: 1025px) {
+  .top-banner {
+    background-image: url(/img/top-banner-desktop.png);
+    background-size: contain;
+    height: 360px;
+  }
+}
+
 .hero {
   background-image: url(/img/hero_mobile_small.jpg);
   background-repeat: no-repeat;
@@ -89,5 +105,14 @@
     background-size: cover;
     height: 560px;
     margin-top: -120px;
+  }
+}
+
+@media screen and (min-width: 769px) and (max-width: 1024px) {
+  .hero {
+    background-image: url(/img/hero_tablet.jpg);
+    background-size: cover;
+    height: 750px;
+    margin-top: -90px;
   }
 }
