--- a/css/main.css
+++ b/css/main.css
@@ -924,6 +924,18 @@ a.nowrap {
     background-size: contain;
     height: 320px; } }
 
+@media screen and (min-width: 768px) and (max-width: 1024px) {
+  .top-banner {
+    background-image: url(/img/top-banner-tablet.png);
+    background-size: contain;
+    height: 360px; } }
+
+@media screen and (min-width: 1025px) {
+  .top-banner {
+    background-image: url(/img/top-banner-desktop.png);
+    background-size: contain;
+    height: 360px; } }
+
 .hero {
   background-image: url(/img/hero_mobile_small.jpg);
   background-repeat: no-repeat;
@@ -963,6 +975,13 @@ a.nowrap {
     height: 560px;
     margin-top: -120px; } }
 
+@media screen and (min-width: 769px) and (max-width: 1024px) {
+  .hero {
+    background-image: url(/img/hero_tablet.jpg);
+    background-size: cover;
+    height: 750px;
+    margin-top: -90px; } }
+
 .wave {
   width: 100%;
   height: auto;
@@ -980,13 +999,15 @@ a.nowrap {
 
 @media screen and (min-width: 412px) and (max-width: 480px) {
   .wave {
-    margin-top: 400px;
-    margin-bottom: -30px; } }
+    margin-top: 400px; } }
 
 @media screen and (min-width: 481px) and (max-width: 768px) {
   .wave {
-    margin-top: 670px;
-    margin-bottom: -30px; } }
+    margin-top: 670px; } }
+
+@media screen and (min-width: 769px) and (max-width: 1024px) {
+  .wave {
+    margin-top: 900px; } }
 
 .content-marg {
   margin-top: -90px;
@@ -1033,6 +1054,14 @@ body {
   overflow-y: hidden;
   width: 70%; }
 
+@media screen and (min-width: 768px) {
+  .apply-pos {
+    width: 60%; } }
+
+@media screen and (min-width: 1024px) {
+  .apply-pos {
+    width: 40%; } }
+
 .no-scroll {
   overflow-y: hidden; }
 
@@ -1042,15 +1071,31 @@ body {
   margin-bottom: -40px;
   width: 80%; }
 
+@media screen and (min-width: 768px) {
+  .more-pos {
+    width: 60%; } }
+
+@media screen and (min-width: 1024px) {
+  .more-pos {
+    width: 40%; } }
+
 .phone {
   margin-left: -80px;
   margin-top: 40px;
   width: 30%; }
 
+@media screen and (min-width: 768px) {
+  .phone {
+    width: 20%; } }
+
 .questions-pos {
   margin-bottom: -40px;
   margin-top: -40px;
-  width: 80%; }
+  width: 60%; }
+
+@media screen and (min-width: 1024px) {
+  .questions-pos {
+    width: 40%; } }
 
 .contact-intro {
   font-family: 'Roboto', sans-serif;
@@ -1084,9 +1129,19 @@ body {
   border-width: thin;
   border-color: white; }
 
+@media screen and (min-width: 768px) {
+  .engagement-card {
+    width: 40%;
+    margin-left: 30%;
+    margin-right: 30%; } }
+
 .card-btn {
   margin-bottom: 20px;
   margin-top: 20px; }
+
+@media screen and (min-width: 480px) {
+  .img-marg {
+    margin-bottom: 40px; } }
 
 .nav-social {
   float: left;
